# axiom

./: 2407.20292v1.pdf.markdown  AXIOM.pdf.markdown  LICENSE  README.md  defaults.py  example.ipynb  main.py  pyproject.toml
axiom/: infer.py  planner.py  visualize.py
axiom/models/: __init__.py  hsmm.py  imm.py  rmm.py  smm.py  tmm.py  utils_hybrid.py
axiom/vi/: __init__.py  distribution.py
axiom/vi/conjugate/: __init__.py  base.py  multinomial.py  mvn.py
axiom/vi/exponential/: __init__.py  base.py  delta.py  linear.py  mixture.py  multinomial.py  mvn.py
axiom/vi/models/: __init__.py  base.py  hybrid_mixture_model.py  mixture.py  slot_mixture_model.py
axiom/vi/transforms/: __init__.py  base.py  linear_mng.py
axiom/vi/utils/: __init__.py  input_handling.py  maps.py  math.py  pytree.py
